# myth

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_zh.md  package-lock.json  package.json
.github/workflows/: deploy.yml
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/docs/: API.md  API_zh.md  UserGuide.md  UserGuide_zh.md
bindings/python/examples/: custom_post_fx.py  custom_shader_material.py  gaussian_splatting.py  headless_screen_space_test.py  screen_space_demo.py  video_texture.py
bindings/python/myth/: __init__.pyi
bindings/python/src/: advanced.rs  app.rs  engine_proxy.rs  gaussian.rs  geometry.rs  lib.rs  readback.rs  renderer.rs  scene.rs  texture.rs
crates/myth_app/: Cargo.toml
crates/myth_app/src/: app.rs  engine.rs  lib.rs  platform.rs
crates/myth_app/src/winit/: mod.rs
crates/myth_assets/: Cargo.toml
crates/myth_assets/src/: lib.rs  scene_ext.rs  server.rs  storage.rs
crates/myth_assets/src/loaders/: gltf.rs  mod.rs  spz.rs
crates/myth_dev_utils/: Cargo.toml
crates/myth_dev_utils/src/: lib.rs  ocean.rs
crates/myth_macros/src/: codegen.rs  lib.rs  parse.rs
crates/myth_render/: Cargo.toml
crates/myth_render/src/: lib.rs  renderer.rs  settings.rs
crates/myth_render/src/core/: context.rs
crates/myth_render/src/core/gpu/: binding.rs  environment.rs  mod.rs  system_textures.rs  texture.rs
crates/myth_render/src/graph/: composer.rs  culling.rs  extracted.rs  frame.rs  render_state.rs
crates/myth_render/src/graph/core/: blackboard.rs  builder.rs  context.rs  graph.rs  mod.rs  node.rs  template_pass.rs
crates/myth_render/src/graph/passes/: atmosphere.rs  clustered_lighting.rs  debug_view.rs  draw.rs  equirect_to_cube.rs  gaussian_splatting.rs  hiz_build.rs  ibl_compute.rs  light_merge.rs  mod.rs  opaque.rs  prepass.rs  present.rs  simple_forward.rs  skybox.rs  ssao.rs  ssgi.rs  ssr.rs  ssss.rs  taa.rs  tone_mapping.rs  transparent.rs
crates/myth_render/src/pipeline/: cache.rs  pipeline_key.rs  shader_gen.rs  shader_manager.rs
crates/myth_render/src/pipeline/shaders/core/: fragment_output.wgsl
crates/myth_render/src/pipeline/shaders/entry/features/ssao/: blur.wgsl  raw.wgsl
crates/myth_render/src/pipeline/shaders/entry/features/ssgi/: atrous_blur.wgsl  merge.wgsl
crates/myth_render/src/pipeline/shaders/entry/features/ssr/: spatial_filter.wgsl  temporal.wgsl  trace.wgsl
crates/myth_render/src/pipeline/shaders/entry/features/ssss/: blur.wgsl
crates/myth_render/src/pipeline/shaders/entry/main/: phong.wgsl  physical.wgsl  unlit.wgsl
crates/myth_render/src/pipeline/shaders/entry/post_process/: debug_view.wgsl  hiz_downsample.wgsl  ssao_raw.wgsl  ssgi_atrous_blur.wgsl  ssgi_blur.wgsl  ssgi_hiz_downsample.wgsl  ssgi_hiz_init.wgsl  ssgi_merge.wgsl  ssgi_raw.wgsl  ssgi_temporal.wgsl  ssr_merge.wgsl  ssr_spatial_filter.wgsl  ssr_temporal.wgsl  ssr_trace.wgsl  taa_resolve.wgsl  tone_mapping.wgsl
crates/myth_render/src/pipeline/shaders/entry/utility/: blue_noise.wgsl  depth_prepass.wgsl  skybox.wgsl
crates/myth_render/src/pipeline/shaders/entry/utility/3dgs/: gaussian_preprocess.wgsl  gaussian_render.wgsl
crates/myth_render/src/pipeline/shaders/entry/utility/atmosphere/: atmosphere_math.wgsl  transmittance_math.wgsl
crates/myth_render/src/pipeline/shaders/entry/utility/clustered/: cluster_build.wgsl  cluster_cull.wgsl  cluster_dispatch_args.wgsl  cluster_light_view_transform.wgsl
crates/myth_render/src/pipeline/shaders/entry/utility/hiz/: init.wgsl
crates/myth_render/src/pipeline/shaders/modules/lighting/: punctual.wgsl
crates/myth_render/src/pipeline/shaders/modules/raymarch/: hiz_traversal.wgsl
crates/myth_resources/src/: geometry.rs  image.rs  lib.rs  screen_space.rs  ssao.rs  ssgi.rs  ssr.rs  ssss.rs  texture.rs  uniforms.rs
crates/myth_scene/src/: camera.rs  day_night.rs  light.rs  scene.rs
demo_apps/gallery/: index.html  main.js  style.css
demo_apps/gltf_viewer/: main.rs
demo_apps/showcase/: main.rs
docs/: API.md  AdvancedCustomization.md  AdvancedCustomization_zh.md  ClusteredShading.md  ClusteredShading_zh.md  RenderGraph_zh.md  UserGuide.md  index.md  tsconfig.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  index.ts  shims-vue.d.ts
docs/advanced/: 3dgs-integration.md  clustered-shading.md  custom-shader.md  headless-rendering.md  pbr-materials.md  post-processing.md  procedural-sky.md
docs/architecture/: asset-pipeline.md  material-system.md  render-graph.md  rendering-pipeline.md
docs/articles/: index.md
docs/blog/: render-graph-design.md
docs/en/: index.md
docs/en/advanced/: 3dgs-integration.md  clustered-shading.md  custom-shader.md  headless-rendering.md  pbr-materials.md  post-processing.md  procedural-sky.md
docs/en/architecture/: asset-pipeline.md  (+3 more)
docs/guide/: assets-animation.md  features.md  introduction.md  python.md  quick-start.md  scene-graph.md
examples/: bloom.rs  box.rs  box_pbr.rs  box_phong.rs  clustered_heatmap.rs  clustered_lighting.rs  clustered_neon_corridor.rs  clustered_stress.rs  cube_wave.rs  custom_material.rs  custom_material_detail_surface.rs  custom_material_dissolve.rs  custom_material_hologram.rs  custom_material_radar.rs  custom_material_slope_blend.rs  custom_material_template_aurora_gate.rs  custom_material_texture_flow.rs  custom_material_triplanar.rs  custom_post_fx.rs  digital_rain.rs  doom_fire.rs  earth.rs  feedback_portal.rs  gaussian_splatting.rs  gaussian_splatting_mixed.rs  gaussian_splatting_viewer.rs  gpu_driven_particle_lights.rs  hdr_env.rs  hello_triangle.rs  helmet_gltf.rs  hero_capture.rs  hyperspace_starfield.rs  morph_target.rs  newton_cradle.rs  ocean_composite_scene.rs  pbr_materials.rs  plasma_tunnel.rs  primitives.rs  procedural_ocean.rs  procedural_sky.rs  (+14 more)
scripts/: build-hero-video.ps1  build-site.ps1  build-site.sh
src/: lib.rs
tests/: asset_tests.rs  camera_frustum_tests.rs  geometry_tests.rs  headless_test.rs  resources_tests.rs  screen_space_headless.rs  shadow_tests.rs  transform_tests.rs
xtask/: README.md  README_zh.md
xtask/src/: main.rs
(+20 files in other folders)
