[workspace]

[package]
name = "myth-py"
version = "0.3.0"
edition = "2024"

[lib]
name = "myth_binding"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.1", features = ["extension-module", "abi3-py310", "generate-import-lib"] }
# Standalone / CI: use the git dependency instead:
myth_engine = { path = "../../", package = "myth-engine" }

slotmap = "1"
raw-window-handle = "0.6"
pollster = "0.4"
bytemuck = { version = "1.25", features = ["derive"] }
log = "0.4"
env_logger = "0.11.10"
parking_lot = "0.12"


# [patch."https://github.com/panxinmiao/myth.git"]
# myth-engine = { path = "../../" }

[features]
default = ["gaussian-npz", "gaussian-spz"]
gaussian-npz = ["myth_engine/gaussian-npz"]
gaussian-spz = ["myth_engine/gaussian-spz"]
