[package]
name = "myth_app"
description = "Application framework and windowing integration for the Myth engine."
keywords.workspace = true
categories.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
myth_core      = { workspace = true }
myth_resources = { workspace = true }
myth_animation = { workspace = true }
myth_scene     = { workspace = true }
myth_assets    = { workspace = true }
myth_render    = { workspace = true }

glam = { workspace = true }
log = { workspace = true }
raw-window-handle = { workspace = true }
pollster = { workspace = true }
env_logger = { workspace = true }

# Optional
winit = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true , features = [
    "Document", "Window", "Element", "DomTokenList", "HtmlCanvasElement", "HtmlInputElement",
    "Location", "Request", "RequestInit", "RequestMode", "Response", "Headers",
    "File", "FileList", "FileReader", "Blob", "ProgressEvent", "console",
    "UrlSearchParams",
]}
web-time = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
getrandom = { workspace = true }

[features]
default = []
winit = ["dep:winit"]
advanced_noise = ["myth_render/advanced_noise"]

[lints]
workspace = true
