[package]
name = "myth_render"
description = "Core rendering system for the Myth engine (render graph, pipeline, GPU management)."
keywords.workspace = true
categories.workspace = true
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
myth_core      = { workspace = true }
myth_resources = { workspace = true }
myth_animation = { workspace = true }
myth_scene     = { workspace = true }
myth_assets    = { workspace = true }

wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
bumpalo = { workspace = true }
flume = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
slotmap = { workspace = true }
smallvec = { workspace = true }
xxhash-rust = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
half = { workspace = true }
raw-window-handle = { workspace = true }
paste = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
image = { workspace = true }

# Templating for shader generation
minijinja = { workspace = true }
rust-embed = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = { workspace = true, features = ["deadlock_detection"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgpu", "fragile-send-sync-non-atomic-wasm"] }

[dev-dependencies]
pollster = { workspace = true }

[features]
default = ["advanced_noise"]
advanced_noise = []
rdg_inspector = []
debug_view = ["myth_scene/debug_view"]
3dgs = ["myth_resources/3dgs", "myth_scene/3dgs", "myth_assets/3dgs"]

[lints]
workspace = true
